test/langtools/tools/javac/ImplicitClass/ImplicitClassRecovery.out
ImplicitClassRecovery.java:8:33: compiler.err.expected: ';'
1 error
